--- a/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -20,8 +20,8 @@ spring:
   mail:
     host: localhost
     port: 1025
-    username: kiran
-    password: kiran
+    username: kirankumarparasa9996@gmail.com
+    password: 9396669996
     properties:
       mail:
         smtp:
